# delfem2-python-bindings

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hello_world.py  hoge.sh
.github/workflows/: ci_ubuntu.yml
delfem2/: __init__.py  camera.py  drawer_axisxyz.py  drawer_mesh.py  framebuffer_glfw.py  invisible_window_glfw.py  mesh.py  navigation_glfw.py  plot3.py  render_to_texture.py  show_3d.py  window_glfw.py
delfem2/opengl/: __init__.py  camera.py  drawer_mesh.py  invisible_window_glfw.py  navigation_glfw.py  plot3.py  render_to_texture.py  window_glfw.py
examples/: 00_openwin_glfw.py  01_openwin_glfw2.py  02_openwin_glfw3.py  10_depth.py  10_r2t.py  12_texture.py  13_bvh.py  14_mesh.py
script/: build_alembic.sh
src/: CMakeLists.txt  alembic_opolymesh.cpp  bvh.cpp  glad.cpp  main.cpp  mat3.cpp  meshio.cpp  msh_elm.cpp  msh_io.cpp  opengl-old-drawer_r2t.cpp  opengl-old-mshuni.cpp  opengl-r2t.cpp  opengl-tex.cpp  opengleigen-funcs.cpp
src/alembic/: CMakeLists.txt  alembic_opolymesh.cpp  main.cpp
src/opengl/: CMakeLists.txt  glad.cpp  main.cpp  opengl-r2t.cpp
